--- a/styling.css
+++ b/styling.css
@@ -29,3 +29,17 @@ body{
     background: rgb(63,184,251);
     background: radial-gradient(circle, rgba(63,184,251,1) 0%, rgba(70,252,232,1) 100%);
 }
+#download{
+    font-family: 'Orbitron', sans-serif;  
+    border: none;
+        color: white;
+        background-color: #FC465A;
+        padding: 16px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+        border-radius: 25px;
+}
