--- a/styling.css
+++ b/styling.css
@@ -12,6 +12,9 @@
     text-align: center;
 
 }
+.downInp{
+    margin:5px;
+}
 .resultChild{
     display: block;
     width: 100%;
@@ -42,7 +45,32 @@ body{
         transition-duration: 0.4s;
         cursor: pointer;
         border-radius: 25px;
+        margin-left: 10px;
+}
+#subButton{
+    font-family: 'Orbitron', sans-serif;  
+    border: none;
+        color: white;
+        background-color: #FC465A;
+        padding: 16px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+        border-radius: 25px;
+        margin-left: 10px;
 }
 #downDeets{
     display: none;
+    margin: 10px;
+    text-align: center;
+}
+#downloads{
+    justify-content: center;
+    display: flex;
+}
+#subText{
+    display: inline;
 }
