--- a/public/styling.css
+++ b/public/styling.css
@@ -62,6 +62,12 @@ body{
         border-radius: 25px;
         margin-left: 10px;
 }
+#subButton:hover{
+    background-color:#eb0e26;
+}
+#downButton:hover{
+    background-color:#eb0e26;
+}
 #downDeets{
     display: none;
     margin: 10px;
